<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="10dp"
              android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="60dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="15dp"
            android:src="@mipmap/ic_mine"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/tv_app_version"
            android:textColor="@color/textSecondary"
            android:textSize="18sp"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_manifesto"
            android:textColor="@color/textPrimary"
            android:textSize="20sp"/>

    </LinearLayout>

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorDivider"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:paddingLeft="18dp"
        android:paddingRight="18dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_rate_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/tv_rate_us"
            android:textColor="@color/textSecondary"
            android:textSize="16sp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/tv_feedback"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"/>


    </RelativeLayout>

</LinearLayout>